[package]
name = "pymute"
author = "Leonard Sasse"
version = "0.2.1"
edition = "2021"
license = "Unlicense"
readme = "README.md"
documentation = "https://docs.rs/pymute/latest/pymute/"
description = "Pymute: A Mutation Testing Tool for Python/Pytest written in Rust"
repository = "https://github.com/LeSasse/pymute"
keywords = ["python", "mutation-testing", "python-tooling", "pytest", "tox"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

# Binaries
[[bin]]
name = "pymute"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["cargo", "derive"]}
colored = "2.1.0"
cp_r = "0.5.1"
ctrlc = {version = "3.4.4", features = ["termination"]}
glob = "0.3.1"
indicatif = { version = "0.17.8", features = ["rayon"]}
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.10.0"
regex = "1.10.4"
tempfile = "3.10.1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"